e2e without data binding

--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -1,5 +1,5 @@
 <div class="btn-group mr-3" role="group">
-    <div class="btn-group mr-3" data-frmdb-select="i" role="menu">
+    <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" data-frmdb-select="i" role="menu">
         <button class="btn text-nowrap" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="la la-square" data-frmdb-attr="style.color::selectedColor.primary"></i>
             <i class="la la-square" data-frmdb-attr="style.color::selectedColor.secondary"></i>
@@ -11,11 +11,11 @@
             </a>
         </div>
     </div>
-    <div class="btn-group mr-3" role="menu">
+    <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
         <button class="btn" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="la la-image"></i>
         </button>
-        <div class="dropdown-menu dropdown-menu-right" style="width: 60vw; height: 90vh; overflow: auto" aria-labelledby="frmdb-editor-theme-select">
+        <div class="dropdown-menu dropdown-menu-right" style="width: 60vw; height: 60vh; overflow: auto" aria-labelledby="frmdb-editor-theme-select">
             <div class="card-deck frmdb-cards-wrap-2">
                 <frmdb-theme-preview class="dropdown-item card p-2 m-2" style="transform: scale(0.85);" data-frmdb-table="themes[]" data-frmdb-attr="color::selectedColor.attr" data-frmdb-attr2="theme::themes[]"></frmdb-theme-preview>
             </div>
