--- a/fe/src/frmdb-editor/icon-editor.component.html
+++ b/fe/src/frmdb-editor/icon-editor.component.html
@@ -23,7 +23,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="tab-pane" id="Free_Public_Icons" role="tabpanel" aria-labelledby="profile-tab">
+                    <div class="tab-pane" id="Paid_Icons" role="tabpanel" aria-labelledby="profile-tab">
                         <div class="d-flex align-items-center">
                             <div class="input-group mb-3">
                                 <input id="frmdb-search-free-icons" type="text" class="form-control"
