take page list form the file system

--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -27,7 +27,7 @@
         <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="la la-level-down la-rotate-90"></i></a>
         <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="la la-arrow-up"></i></a>
         <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
-        <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element"><i class="la la-edit"></i></a>
+        <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="la la-edit"></i></a>
         <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="la la-copy"></i></a>
         <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="la la-plus-circle"></i></a>
         <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="la la-plus"></i></a>
