--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -1,6 +1,6 @@
 <div class="btn-group mr-3" role="group">
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" data-frmdb-select="i" role="menu">
-        <button class="btn text-nowrap" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn text-nowrap" title="Choose Color Palette" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="la la-square" data-frmdb-attr="style.color::selectedColor.primary"></i>
             <i class="la la-square" data-frmdb-attr="style.color::selectedColor.secondary"></i>
         </button>
@@ -12,13 +12,22 @@
         </div>
     </div>
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
-        <button class="btn" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="la la-image"></i>
+        <button class="btn" title="Choose Look (Fonts/Spacing/Roundness/etc)" id="frmdb-editor-look-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="la la-font"></i>
         </button>
-        <div class="dropdown-menu dropdown-menu-right" style="width: 60vw; height: 60vh; overflow: auto" aria-labelledby="frmdb-editor-theme-select">
+        <div class="dropdown-menu dropdown-menu-right" style="width: 60vw; height: 60vh; overflow: auto" aria-labelledby="frmdb-editor-look-select">
             <div class="card-deck frmdb-cards-wrap-2">
-                <frmdb-theme-preview class="dropdown-item card p-2 m-2" style="transform: scale(0.85);" data-frmdb-table="themes[]" data-frmdb-attr="color::selectedColor.attr" data-frmdb-attr2="theme::themes[]"></frmdb-theme-preview>
+                <frmdb-look-preview class="dropdown-item card p-2 m-2" style="transform: scale(0.85);" data-frmdb-table="looks[]" data-frmdb-attr="color::selectedColor.attr" data-frmdb-attr2="look::looks[]"></frmdb-look-preview>
             </div>
         </div>
     </div>
+    <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
+        <button class="btn" title="Choose Theme (experimental...)" id="frmdb-editor-theme-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="la la-image"></i>
+        </button>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-theme-select">
+            <a class="dropdown-item text-nowrap" data-frmdb-theme="Comfort">Comfort</a>
+            <a class="dropdown-item text-nowrap" data-frmdb-theme="GrandFrames">Grand Frames</a>
+        </div>
+    </div>    
 </div>
