modifs for themes

--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -1,4 +1,4 @@
-<div class="btn-group mr-3" role="group">
+<div class="btn-group mr-3 h-100" role="group">
     <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" data-frmdb-select="i" role="menu">
         <button class="btn text-nowrap" title="Choose Color Palette" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="la la-square" data-frmdb-attr="style.color::selectedColor.primary"></i>
@@ -15,7 +15,7 @@
         <button class="btn" title="Choose Look (Fonts/Spacing/Roundness/etc)" id="frmdb-editor-look-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="la la-font"></i>
         </button>
-        <div class="dropdown-menu dropdown-menu-right" style="width: 60vw; height: 60vh; overflow: auto" aria-labelledby="frmdb-editor-look-select">
+        <div class="dropdown-menu dropdown-menu-right" style="width: 50vw; height: 50vh; overflow: auto" aria-labelledby="frmdb-editor-look-select">
             <div class="card-deck frmdb-cards-wrap-2">
                 <frmdb-look-preview class="dropdown-item card p-2 m-2" style="transform: scale(0.85);" data-frmdb-table="looks[]" data-frmdb-attr="color::selectedColor.attr" data-frmdb-attr2="look::looks[]"></frmdb-look-preview>
             </div>
