removed hardcoded themes and looks, dynamically loading them from formuladb-env

--- a/fe/src/theme-customizer/theme-customizer.component.html
+++ b/fe/src/theme-customizer/theme-customizer.component.html
@@ -26,8 +26,8 @@
             <i class="la la-image"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="frmdb-editor-theme-select">
-            <a class="dropdown-item text-nowrap" data-frmdb-theme="Comfort">Comfort</a>
-            <a class="dropdown-item text-nowrap" data-frmdb-theme="GrandFrames">Grand Frames</a>
+            <a class="dropdown-item text-nowrap" data-frmdb-theme="- none -">- none -</a>
+            <a class="dropdown-item text-nowrap" data-frmdb-table="themes[]" data-frmdb-value="themes[]" data-frmdb-attr="data-frmdb-theme:themes[]"></a>
         </div>
     </div>    
 </div>
