started adding IMAGE editor to data grid form

--- a/fe/src/form/form.component.html
+++ b/fe/src/form/form.component.html
@@ -8,10 +8,13 @@
                 data-frmdb-attr2="!disabled::props[].disabled"
                 data-frmdb-attr4="data-frmdb-target-field:props[].name"
                 />
-            <frmdb-autocomplete data-frmdb-if="::props[].isAutocomplete" 
+            <frmdb-autocomplete data-frmdb-if="props[].isAutocomplete" 
                 data-frmdb-attr="ref_entity_name::props[].referencedEntityName"
                 data-frmdb-attr2="ref_property_name::props[].referencedPropertyName"
                 ></frmdb-autocomplete>
+            <frmdb-img-editor data-frmdb-if="props[].isImage" 
+                data-frmdb-attr="img-src:dataObj:props[].name"
+                ></frmdb-img-editor>
         </div>
     </div>
 </form>
