--- a/fe/src/frmdb-editor/img-editor.component.html
+++ b/fe/src/frmdb-editor/img-editor.component.html
@@ -1,3 +1,6 @@
+<a onclick="this.closest('frmdb-img-editor').startDefault()" data-frmdb-attr="class.display-none:displayImgLink" href="javascript:void(0)">
+    <img style="width: 100%; border-radius: 5px; border: 1px solid grey;" data-frmdb-attr="src:imgSrc" />
+</a>
 <div class="modal fade modal-xl" id="img-editor-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
     <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
         <div class="modal-content" style="height: 85vh; width: 96vw; max-width: 96vw">
