added nested-modal and removed jquery and bootstrap js files

--- a/fe/src/form/form.component.html
+++ b/fe/src/form/form.component.html
@@ -12,9 +12,9 @@
                 data-frmdb-attr="ref_entity_name::props[].referencedEntityName"
                 data-frmdb-attr2="ref_property_name::props[].referencedPropertyName"
                 ></frmdb-autocomplete>
-            <frmdb-img-editor data-frmdb-if="props[].isImage" 
+            <frmdb-form-image data-frmdb-if="props[].isImage" 
                 data-frmdb-attr="img-src:dataObj:props[].name"
-                ></frmdb-img-editor>
+                ></frmdb-form-image>
         </div>
     </div>
 </form>
