--- a/fe/src/frmdb-editor/img-editor.component.html
+++ b/fe/src/frmdb-editor/img-editor.component.html
@@ -1,16 +1,13 @@
-<a onclick="this.closest('frmdb-img-editor').startDefault()" data-frmdb-attr="class.display-none:displayImgLink" href="javascript:void(0)">
-    <img style="width: 100%; border-radius: 5px; border: 1px solid grey;" data-frmdb-attr="src:imgSrc" />
-</a>
-<div class="modal fade modal-xl" id="img-editor-modal" style="width: 100vw; max-width: 100vw" tabindex="-1" role="dialog">
-    <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
-        <div class="modal-content" style="height: 85vh; width: 96vw; max-width: 96vw">
+<div class="modal fade frmdb-bg-dark-70" id="img-editor-modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-xl" role="document" >
+        <div class="modal-content" >
             <div class="modal-header">
                 <h5 class="modal-title"><i class="la la-image"></i> Choose Image</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
                 </button>
             </div>
-            <div class="modal-body h-100 overflow-hidden mb-4">
+            <div class="modal-body vh-90 overflow-hidden mb-4">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <a class="nav-item nav-link active" data-toggle="tab" href="#Uploaded_Images">My Uploaded Images</a>
