--- a/fe/src/frmdb-editor/frmdb-editor.directive.scss
+++ b/fe/src/frmdb-editor/frmdb-editor.directive.scss
@@ -60,6 +60,7 @@ $grid-gutter-width:           5px;
 @import "../../../themes/frmdb/mixins";
 @import "../../../themes/frmdb/dropdown";
 @import "../../../themes/frmdb/card";
+@import "../../../themes/frmdb/modal";
 @import "../../../themes/frmdb/utilities/scrollbar";
 @import "../../../themes/frmdb/utilities/background";
 @import "../../../themes/frmdb/utilities/sizing";
