--- a/fe/src/frmdb-editor/img-editor.component.html
+++ b/fe/src/frmdb-editor/img-editor.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade frmdb-bg-dark-70" id="img-editor-modal" tabindex="-1" role="dialog">
+<div class="modal fade frmdb-bg-dark-70 frmdb-level-2" id="img-editor-modal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-xl" role="document" >
         <div class="modal-content" >
             <div class="modal-header">
