--- a/fe/src/data-grid/data-grid-tools.component.html
+++ b/fe/src/data-grid/data-grid-tools.component.html
@@ -1,7 +1,7 @@
 <div class="data-grid-tools">
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a class="nav-link active" role="tab" href="#options"><i class="la la-gear"></i> Options</a>
+            <a class="nav-link active" role="tab" href="#options"><i class="frmdb-i-fa-gear"></i> Options</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" role="tab" href="#state">State</a>
@@ -14,13 +14,13 @@
     <div class="tab-content">
         <div class="tab-pane show active" id="options" role="tabpanel" aria-labelledby="home-tab">
             <ul class="nav flex-column">
-                <li class="nav-item"><a href="#" class="nav-link add-column-to-table-btn "><i class="la la-plus-square"></i> Add Column</a></li>
+                <li class="nav-item"><a href="#" class="nav-link add-column-to-table-btn "><i class="frmdb-i-fa-plus-square"></i> Add Column</a></li>
                 <li class="nav-divider"></li>
-                <li class="nav-item"><a href="#" class="nav-link add-row "><i class="la la-plus-circle"></i> Add Row</a></li>
-                <li class="nav-item"><a href="#" class="nav-link clone-row "><i class="la la-clone"></i> Clone Row</a></li>
-                <li class="nav-item"><a href="#" class="nav-link delete-row "><i class="la la-trash"></i> Delete Row</a></li>
+                <li class="nav-item"><a href="#" class="nav-link add-row "><i class="frmdb-i-fa-plus-circle"></i> Add Row</a></li>
+                <li class="nav-item"><a href="#" class="nav-link clone-row "><i class="frmdb-i-fa-clone"></i> Clone Row</a></li>
+                <li class="nav-item"><a href="#" class="nav-link delete-row "><i class="frmdb-i-fa-trash"></i> Delete Row</a></li>
                 <li class="nav-divider"></li>
-                <li class="nav-item"><a href="#" class="nav-link excel-export "><i class="la la-file-excel-o"></i> Export Excel</a></li>
+                <li class="nav-item"><a href="#" class="nav-link excel-export "><i class="frmdb-i-fa-file-excel-o"></i> Export Excel</a></li>
             </ul>
         </div>
         <div class="tab-pane" id="state" role="tabpanel" aria-labelledby="home-tab">
