--- a/fe/src/frmdb-editor/add-element.component.html
+++ b/fe/src/frmdb-editor/add-element.component.html
@@ -2,14 +2,14 @@
     <div class="modal-dialog mt-3" role="document" style="width: 96vw; max-width: 96vw">
         <div class="modal-content" style="width: 96vw; max-width: 96vw">
             <div class="modal-header">
-                <p class="modal-title text-primary"><i class="la la-lg la-video"></i> Choose Page Element to Add</p>
+                <p class="modal-title text-primary"><i class="frmdb-i-lg frmdb-i-fa-video"></i> Choose Page Element to Add</p>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+                    <span aria-hidden="true"><small><i class="frmdb-i-fa-close"></i></small></span>
                 </button>
             </div>
             <div class="modal-body">
                 <div id="examples-canvas" class="w-100 h-100 position-relative overflow-hidden">
-                    <iframe src="/formuladb-env/frmdb-platform-apps/themes/index.html"></iframe>
+                    <iframe src="/frmdb-platform-apps/themes/index.html"></iframe>
                     <frmdb-highlight-box class="names-hidden"></frmdb-highlight-box>
                 </div>
             </div>
