--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -14,7 +14,7 @@
         <div class="elem"></div>
     </div>
     <div class="actions bottom">
-        <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="la la-plus-circle"></i></a> -->
+        <!-- <a id="add-section-btn" href="javascript:void(0)" title="Add element"><i class="frmdb-i-fa-plus-circle"></i></a> -->
     </div>
 </div>
 
@@ -22,16 +22,16 @@
 </div>
 <div id="selected" class="box">
     <div class="actions selected">
-        <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="la la-arrows"></i></a> -->
-        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="la la-level-down la-rotate-180"></i></a>
-        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="la la-level-down la-rotate-90"></i></a>
-        <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="la la-arrow-up"></i></a>
-        <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="la la-arrow-down"></i></a>
-        <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="la la-edit"></i></a>
-        <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="la la-copy"></i></a>
-        <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="la la-plus-circle"></i></a>
-        <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="la la-plus"></i></a>
-        <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="la la-trash"></i></a>
+        <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="frmdb-i-fa-arrows"></i></a> -->
+        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="frmdb-i-fa-level-down la-rotate-180"></i></a>
+        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="frmdb-i-fa-level-down la-rotate-90"></i></a>
+        <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="frmdb-i-fa-arrow-up"></i></a>
+        <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="frmdb-i-fa-arrow-down"></i></a>
+        <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="frmdb-i-fa-edit"></i></a>
+        <a class="btn" data-frmdb-action="clone" href="javascript:void(0)" title="Clone element"><i class="frmdb-i-fa-copy"></i></a>
+        <a class="btn" data-frmdb-action="add-inside" href="javascript:void(0)" title="Add element inside"><i class="frmdb-i-fa-plus-circle"></i></a>
+        <a class="btn" data-frmdb-action="add-after" href="javascript:void(0)" title="Add element after"><i class="frmdb-i-fa-plus"></i></a>
+        <a class="btn" data-frmdb-action="delete" href="javascript:void(0)" title="Remove element"><i class="frmdb-i-fa-trash"></i></a>
     </div>
     <div class="actions editing">
         <a class="btn" id="bold-btn" href="javascript:void(0)" title="Bold"><i><strong>B</strong></i></a>
