started cleanup of component editor

--- a/fe/src/formula-editor/formula-editor.component.html
+++ b/fe/src/formula-editor/formula-editor.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/formuladb-env/icons/formuladb/icons.css">
+
 <div class="formula-code-editor">
     <button id="toggle-formula-editor" class="btn" title="Enable/Disable Formula Editor">
         <i class="frmdb-i-frmdb"></i>
