--- a/fe/src/highlight-box/highlight-box.component.html
+++ b/fe/src/highlight-box/highlight-box.component.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/formuladb-env/icons/line-awesome/css/line-awesome.min.css">
+<link rel="stylesheet" href="/formuladb-env/icons/formuladb/icons.css">
+<link rel="stylesheet" href="/formuladb-env/css/_transform.css">
 
 <div id="grand-parent-highlight" class="box">
 </div>
@@ -23,8 +24,8 @@
 <div id="selected" class="box">
     <div class="actions selected">
         <!-- <a class="btn" data-frmdb-action="drag" href="javascript:void(0)" title="Drag element"><i class="frmdb-i-fa-arrows"></i></a> -->
-        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="frmdb-i-fa-level-down la-rotate-180"></i></a>
-        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="frmdb-i-fa-level-down la-rotate-90"></i></a>
+        <a class="btn" data-frmdb-action="parent" href="javascript:void(0)" title="Select parent element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-180"></i></a>
+        <a class="btn" data-frmdb-action="prev" href="javascript:void(0)" title="Select previous sibling element"><i class="frmdb-i-fa-level-down-alt frmdb-i-rotate-90"></i></a>
         <a class="btn" data-frmdb-action="up" href="javascript:void(0)" title="Move element up"><i class="frmdb-i-fa-arrow-up"></i></a>
         <a class="btn" data-frmdb-action="down" href="javascript:void(0)" title="Move element down"><i class="frmdb-i-fa-arrow-down"></i></a>
         <a class="btn" data-frmdb-action="edit" href="javascript:void(0)" title="Edit element text"><i class="frmdb-i-fa-edit"></i></a>
